--- a/package.json
+++ b/package.json
@@ -50,10 +50,14 @@
     "core-js": "^3.36.0",
     "fsevents": "^2.3.3",
     "har-validator": "^5.1.5",
+    "npm-force-resolutions": "^0.0.10",
     "request": "^2.88.2",
     "resolve-url": "^0.2.1",
     "rollup-plugin-babel": "^4.4.0",
     "urix": "^0.1.0",
     "uuid": "^9.0.1"
+  },
+  "resolutions": {
+    "fsevents": false
   }
 }
