--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "rollup-plugin-babel": "^4.4.0",
     "urix": "^0.1.0",
     "uuid": "^9.0.1"
-  },"resolutions": {
+  },
+  "resolutions": {
     "nth-check": "2.0.1",
     "postcss": "8.4.31"
   }
