--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
+    "chalk": "^5.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
@@ -59,5 +60,8 @@
   "resolutions": {
     "nth-check": "2.0.1",
     "postcss": "8.4.31"
+  },
+  "engines": {
+    "node": ">=14.x <20"
   }
 }
