--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^5.0.0",
     "react-scroll": "^1.9.3",
     "scrollreveal": "^4.0.9",
     "web-vitals": "^4.2.4"
@@ -62,6 +62,6 @@
     "postcss": "8.4.31"
   },
   "engines": {
-  "node": "20.x" 
-}
+    "node": ">=20.x"
+  }
 }
